--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"build": "react-router build",
 		"dev": "react-router dev",
 		"start": "react-router-serve ./build/server/index.js",
-		"typecheck": "react-router typegen && tsc"
+		"typecheck": "react-router typegen && tsc",
+		"install": "npx sst deploy"
 	},
 	"dependencies": {
 		"@chakra-ui/react": "^2.10.9",
