--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,8 +46,8 @@ jobs:
             - name: Install dependencies
               run: pnpm i --frozen-lockfile
 
-            - name: Show SST version
-              run: npx sst version
+            - name: Dump environment
+              run: set
 
             - name: Build and Publish
               run: pnpm deploy
