--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,4 +50,4 @@ jobs:
               run: set
 
             - name: Build and Publish
-              run: pnpm deploy
+              run: npx sst deploy
