--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,4 +50,4 @@ jobs:
               run: set
 
             - name: Build and Publish
-              run: pnpm sst version && pnpm exec sst deploy
+              run: rm -rf ~/.npm/_npx && npx sst deploy
