--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
 	},
 	"devDependencies": {
 		"@react-router/dev": "7.10.1",
-		"@types/node": "^22.19.5",
+		"@types/node": "^22.19.7",
 		"@types/react": "^19.2.8",
 		"@types/react-dom": "^19.2.3",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -95,11 +95,17 @@
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-react": "^7.37.5",
 		"eslint-plugin-react-hooks": "^4.6.2",
-		"knip": "^5.80.2",
+		"knip": "^5.81.0",
 		"postcss": "^8.5.6",
 		"tailwindcss": "^3.4.3",
 		"typescript": "^5.9.3",
 		"vite": "^5.4.21",
 		"vite-tsconfig-paths": "^4.3.2"
+	},
+	"pnpm": {
+		"overrides": {
+			"@modelcontextprotocol/sdk@<1.25.2": ">=1.25.2",
+			"hono@<4.11.4": ">=4.11.4"
+		}
 	}
 }
