--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
 		"sonner": "^2.0.7",
 		"sst": "3.17.38",
 		"tailwind-merge": "^3.4.0",
-		"tailwindcss": "3.4.1",
+		"tailwindcss": "^3.4.1",
 		"tailwindcss-animate": "^1.0.7",
 		"tiny-invariant": "^1.3.3",
 		"tslib": "^2.8.1",
