--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@react-router/serve": "7.13.0",
 		"@supabase/ssr": "^0.8.0",
 		"@supabase/supabase-js": "latest",
+		"@tailwindcss/postcss": "^4.2.0",
 		"@tanstack/react-table": "^8.21.3",
 		"@tremor/react": "^3.18.7",
 		"autoprefixer": "10.4.24",
